# ultra_ext

./: .gitignore  README.md  pyproject.toml  setup.py
ultra_ext/: __init__.py  cache.py  ckpt.py  compare.py  im.py  lbm.py  obj365v1.py  utils.py  yolo26.py  yoloe.py
ultra_ext/datasets/: __init__.py  refcoco.py
ultra_ext/htmb/: htmb.py  spacy_subject_demo.py  tag_list.txt
